[gd_scene load_steps=7 format=3 uid="uid://crew3d001"]

[ext_resource type="Script" path="res://src/entities/crew/CrewSquad3D.gd" id="1_script"]

[sub_resource type="CylinderMesh" id="CylinderMesh_select"]
top_radius = 0.5
bottom_radius = 0.5
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_select"]
albedo_color = Color(0.2, 0.8, 0.3, 0.6)
transparency = 1
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_health"]
size = Vector3(0.8, 0.08, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_health_bg"]
albedo_color = Color(0.15, 0.15, 0.15, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_health_fill"]
albedo_color = Color(0.2, 0.8, 0.2, 1)

[node name="CrewSquad3D" type="Node3D"]
script = ExtResource("1_script")

[node name="ModelContainer" type="Node3D" parent="."]

[node name="SelectionIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
visible = false
mesh = SubResource("CylinderMesh_select")
surface_material_override/0 = SubResource("StandardMaterial3D_select")

[node name="HealthBar3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="Background" type="MeshInstance3D" parent="HealthBar3D"]
mesh = SubResource("BoxMesh_health")
surface_material_override/0 = SubResource("StandardMaterial3D_health_bg")

[node name="Fill" type="MeshInstance3D" parent="HealthBar3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("BoxMesh_health")
surface_material_override/0 = SubResource("StandardMaterial3D_health_fill")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
